--- a/astyle-check/action.yml
+++ b/astyle-check/action.yml
@@ -9,11 +9,11 @@ inputs:
   ignore-path-list:
     description: 'File path of paths list to ignore'
     required: false
-    default: '/scripts/.astyleignore'
+    default: '/scripts/astyle_formatting_option/.astyleignore'
   astyle-definition:
     description: 'Code style definition file path for Astyle'
     required: false
-    default: '/scripts/.astylerc'
+    default: '/scripts/astyle_formatting_option/.astylerc'
 outputs:
   astyle-result: # id of output
     description: 'File name of the Astyle Check result'
